<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="33dp">
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/qr"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/enter_code"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_text"
            android:layout_margin="16dp"
            android:gravity="center"/>
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/code_send_fragment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="number"
            android:background="@drawable/text_input_bg"
            android:hint="@string/enter_code"/>
        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code_send_fragment_btn"
            android:background="@drawable/button_shape_blue"
            android:text="@string/autorization"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"/>
    </LinearLayout>

</RelativeLayout>