<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sharedViewModel"
            type="com.kaisho.inomcrm.app.viewModel.SharedViewModel" />
        <variable
            name="accountViewModel"
            type="com.kaisho.inomcrm.app.room.viewModel.AccountViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F9FBFF">

            <View
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/ic_top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_note_circle_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/good_day"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_note_mission_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_note_circle_image"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@{accountViewModel.getAllData[0].name}"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_list_profile_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="32dp"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="1dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_note_view_data_card_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:overScrollMode="never"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_note_mission_view">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#11478F"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_margin="15dp"
                        android:layout_toStartOf="@id/fragment_note_image_lamp"
                        android:text="@string/data_base_title"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="10dp" />

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:src="@drawable/lamp"
                        android:layout_marginBottom="-5dp"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/fragment_note_image_lamp"
                        android:layout_above="@+id/fragment_note_ll_card_view"
                        android:layout_marginEnd="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:background="#325D97"
                        android:orientation="horizontal"
                        android:id="@+id/fragment_note_ll_card_view">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_baseline_attachment_24"
                            android:layout_marginStart="20dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="15sp"
                            android:layout_marginStart="5dp"
                            android:text="@string/data_base"
                            android:textColor="@android:color/white"
                            android:gravity="center" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_note_view_pager_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_note_view_data_card_view"
                tools:layout_editor_absoluteX="30dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/fragment_note_view_pager2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/fragment_note_indicator_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/fragment_note_view_pager2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_note_recycler_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                android:paddingBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_note_view_pager_constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <LinearLayout
                        android:emptyDatabase="@{sharedViewModel.emptyDataBase}"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/empty" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_text"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_note_recycler_view"
                        android:layout_marginBottom="15dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#325D97">

                        <TextView
                            android:layout_alignParentStart="true"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/task"
                            android:layout_marginStart="16dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/fragment_note_date_text"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="@android:color/white" />
                    </RelativeLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>



